src/snapshot_middleware/snapshots/librojo__snapshot_middleware__lua__test__runcontext_script_disabled.snap
---
source: src/snapshot_middleware/lua.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /bar.server.lua
  relevant_paths:
    - /bar.server.lua
    - /bar.meta.json
  context:
    emit_legacy_scripts: false
  middleware: ~
  specified_id:
    Ref: "00000000000000000000000000000000"
name: bar
class_name: Script
properties:
  Disabled:
    Bool: true
  RunContext:
    Enum: 1
  Source:
    String: Hello there!
children: []

